--- a/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
@@ -58,9 +58,9 @@
 				</div>
 			</div>
 			
-			<!-- 상세내용 -->
+			<!-- 상세내용 --><div id="editor" class="ck-blurred ck ck-content ck-editor__editable ck-rounded-corners ck-editor__editable_inline" lang="en" dir="ltr" role="textbox" aria-label="Rich Text Editor, main" contenteditable="false">
 			<div class="modal-body pd60 h850-o" id="lp_mgz9Dtl_cntnt"></div>
-			
+			</div>
 		</div>
 	</div>
 </div>
