관리자 로그인

--- a/src/main/webapp/WEB-INF/views/boInclude/include_top.jspf
+++ b/src/main/webapp/WEB-INF/views/boInclude/include_top.jspf
@@ -39,3 +39,12 @@
   </style>
   
 </head>
+
+<%
+String mbrSq = (String)session.getAttribute("mbrSq");
+
+if(mbrSq == null) {
+	response.sendRedirect("/admin/");	
+}
+%>
+
