--- a/src/main/resources/templates/thymeleaf/fo/about/notice.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/notice.html
@@ -16,7 +16,7 @@
 		<div class="body-wrap">
 			<div class="contents">
 				
-				<div class="con-wrap">
+				<div class="con-wrap mobile-con-wrap">
 					<div class="con-left">
 						<div class="cont-title4">
 							<h3>공지사항</h3>
@@ -32,7 +32,7 @@
 									</h4>
 								</div>
 							</div>
-							<div class="panel panel-default">
+							<div class="panel panel-default active">
 								<div class="panel-heading" role="tab" id="heading2">
 									<h4 class="panel-title">
 										<a href="/notice">
