--- a/src/main/resources/static/css/ui_tablet.css
+++ b/src/main/resources/static/css/ui_tablet.css
@@ -5163,3 +5163,18 @@ position: relative;background-color: #fbfbfb;}
 
 /* 0518 */
 .link-text{width:7.5rem;}
+
+/* 0520 */
+.mobile-con-wrap{}
+.mobile-con-wrap{}
+.mobile-con-wrap .con-left{display: block;}
+.mobile-con-wrap .con-left .cont-title4{display: none;}
+.mobile-con-wrap .con-left .panel-group{display: flex;width: 100%;border-left: #e8e8e8 1px solid;border-right: #e8e8e8 1px solid;}
+.mobile-con-wrap .con-left .panel-group .panel{border-bottom: #e8e8e8 1px solid;border-right: #e8e8e8 1px solid; flex:1;}
+.mobile-con-wrap .con-left .panel-group .panel a{text-align: center;}
+.mobile-con-wrap .con-left .panel-default>.panel-heading{padding: 2.5rem 0 2.5rem 0;}
+.mobile-con-wrap .con-left  .panel-title a:before{display: none;}
+.mobile-con-wrap .con-left .panel-group .panel.active{background-color: #e9625c;}
+.mobile-con-wrap .con-left .panel-group .panel.active a{color: #fff;}
+.mobile-con-wrap .con-left .panel-group .panel-title{font-size: 2.8rem;}
+.mobile-con-wrap .con-right{display: block;width: 100%;margin: 0 auto;max-width: 100% !important;}
