--- a/src/main/resources/templates/thymeleaf/fo/about/customerService.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/customerService.html
@@ -17,7 +17,7 @@
 		<div class="body-wrap">
 			<div class="contents">
 				
-				<div class="con-wrap">
+				<div class="con-wrap mobile-con-wrap">
 					<div class="con-left">
 						<div class="cont-title4">
 							<h3>고객센터</h3>
@@ -42,7 +42,7 @@
 									</h4>
 								</div>
 							</div>
-							<div class="panel panel-default">
+							<div class="panel panel-default active">
 								<div class="panel-heading" role="tab" id="heading3">
 									<h4 class="panel-title">
 										<a href="/customerService">
